# segment_tree

./: 404.html  CMakeLists.txt  README.md  benchmark.sh  build.sh  index.html  install.sh  sitemap.xml  toolchain.cmake
.github/workflows/: cmake_integration_tests.yml  cmake_integration_tests_fetch_content.yml  cmake_integration_tests_install.yml  main.yml  mkdocs.yml
benchmarks/: CMakeLists.txt  benchmark_helpers.h  build.cc  build_comb.cc  build_combined.cc  build_quad.cc  query.cc  query_comb.cc  query_combined.cc  query_quad.cc  result.csv  update.cc  update_comb.cc  update_combined.cc  update_quad.cc
cmake/: ccache.cmake  segment_tree-config.cmake
examples/: 01_basic.cc  02_custom_functor.cc  03_combined_functors.cc  CMakeLists.txt
examples/examples/: index.html
include/manavrion/segment_tree/: details.h  functors.h  mapped_segment_tree.h  naive_segment_tree.h  segment_tree.h
mkdocs/: mkdocs.yml
mkdocs/docs/examples/: examples.md
mkdocs/docs/paper/: paper.md  traversing.md  tree.md
paper/traversing/: index.html
paper/tree/: index.html
search/: search_index.json
src/: CMakeLists.txt
src/manavrion/segment_tree/: CMakeLists.txt  details.h  functors.h  naive_segment_tree.h  node_based_segment_tree.h  plain_segment_tree.h  segment_tree.h
src/manavrion/segment_tree/benchmarks/: CMakeLists.txt  query.cc  query_combined.cc
src/manavrion/segment_tree/examples/: CMakeLists.txt  usage.cc
src/manavrion/segment_tree/unittests/: CMakeLists.txt  complicated_functor_test.h  examples.cc  method_test.h  random_test.h  simple_functor_test.h  test.cc  test_segment_tree.h
src/segment_tree/: details.h  node_based_segment_tree.h  segment_tree.h
src/unittests/: CMakeLists.txt  complicated_functor_test.h  constructor_test.h  method_test.h  test.cc
tests/cmake_integration/fetch_content_test/: CMakeLists.txt  build.sh
tests/cmake_integration/fetch_content_test/src/: test.cc
tests/cmake_integration/fetch_content_test/toolchain/: default_build_toolchain.cmake
tests/cmake_integration_tests/add_subdirectory/: CMakeLists.txt
tests/cmake_integration_tests/fetch_content/: CMakeLists.txt
tests/cmake_integration_tests/fetch_content/cmake/: segment_tree.cmake
tests/cmake_integration_tests/find_package/: CMakeLists.txt  build.sh
tests/cmake_integration_tests/find_package_install/: CMakeLists.txt
tests/unittests/: CMakeLists.txt  complicated_functor_test.cc  complicated_functor_test.h  integration_test.cc  lite_test.cc  method_test.h  simple_functor_test.cc  simple_functor_test.h  test.cc  test_functors.h  test_segment_tree.h
toolchain/: default_build_toolchain.cmake  default_toolchain.cmake  linux_clang6.cmake  linux_clang8.cmake  linux_clang9_benchmark.cmake  linux_gcc7.cmake  linux_gcc8.cmake
